# hawsoo_sentou_goraku_engine

./: .gitmodules  CMakeLists.txt  README.md
docs/: design.md  plan.md
include/: engine.h  hsge_public.h
src/: engine.cpp  engine.h
src/entities/: entity_player.cpp  entity_player.h
